@@ -1,6 +1,7 @@
 Current:
   * Chinese translation updates from liulitchi
   * Better detection of the gnuplot location
+  * Corrected parametric plots in the plot wizard
 
 19.10.0:
   * Corrected a Regression: The better display of exponents failed for exp(x^2).
